<resources>
    <string name="app_name">SmartAlert</string>
    <string name="sign_in">Sign-in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log-in</string>
    <string name="change_language">Change Language</string>

    <string name="welcome">Welcome to the smartalert of Civil Protection</string>
    <string name="create">Create</string>

    <string name="newmail">E-mail</string>
    <string name="newpassword">Password</string>
    <string name="newusername">Username</string>
    <string name="success_message">The registration was successfull</string>
    <string name="error_message">Error</string>
    <string name="info_message">Provide all info!</string>
    <string name="suclogin">The login was successfull</string>
    <string name="erlogin">Wrong</string>
    <string name="register">Register</string>
    <string name="back_menu">Back</string>
    <string name="disaster_type">Disaster Type:</string>
    <string name="welcomeuser">Welcome</string>
    <string name="city">City:</string>
    <string name="address">Address</string>
    <string name="backDangers">Back</string>
    <string name="danger">Danger</string>
    <string name="button">Button</string>
    <string name="high_dangers">High dangers</string>
    <string name="view_dangers">View dangers</string>
    <string name="log_out">Log-out</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="high">High</string>
    <string name="notificate">Notificate</string>
    <string name="datetime">Datetime</string>
    <string name="submit_an_incident">Submit an incident</string>
    <string name="choose_one_of_the_options">Choose one of the options</string>
    <string name="notifications">Notifications</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="reject">Reject</string>
    <string name="submit_success">Data submitted successfully</string>
    <string name="failed_submit">Failed submitted </string>
    <string name="enableGPS">Enable GPS</string>
    <string name="highPrior">High danger</string>
    <string name="sendNotify">Notification sent succesfully in range </string>
    <string name="cityHigh">"City: "</string>
    <string name="disasterHigh">"Disaster type: "</string>
    <string name="timestampHigh">Date and time:</string>
    <string name="all_notifications">All notifications</string>
    <string name="logout">Logout was succesfull</string>
    <string name="successrej">This submission has reject</string>
    <string name="deletesub">Not succesfull</string>
    <string name="welcome_message">Welcome</string>
    <string name="notFound">Not found data</string>
    <string name="totalmessages">Total notififcations</string>
</resources>