<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserMenu">

    <TextView
        android:id="@+id/usernameShow"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="454dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/welcomeuser"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeuser"
        android:layout_width="133dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="115dp"
        android:text="@string/welcomeuser"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toStartOf="@+id/usernameShow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/notifications"
        android:layout_width="176dp"
        android:layout_height="78dp"
        android:layout_marginBottom="43dp"
        android:onClick="view"
        android:text="@string/notifications"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginBottom="147dp"
        android:onClick="total"
        android:text="@string/all_notifications"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameShow" />

    <Button
        android:id="@+id/button3"
        android:layout_width="187dp"
        android:layout_height="81dp"
        android:layout_marginBottom="22dp"
        android:onClick="submit"
        android:text="@string/submit_an_incident"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <Button
        android:id="@+id/logout"
        android:layout_width="183dp"
        android:layout_height="73dp"
        android:layout_marginBottom="23dp"
        android:onClick="logout"
        android:text="@string/log_out"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeuser" />

</androidx.constraintlayout.widget.ConstraintLayout>